--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@navikt/ds-css": "^7.4.0",
+    "@navikt/ds-react": "^7.4.0",
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
     "@remix-run/serve": "^2.13.1",
