--- a/kustomize/base/flais.yaml
+++ b/kustomize/base/flais.yaml
@@ -17,7 +17,10 @@ spec:
   image: ghcr.io/fintlabs/fint-kunde-selvregistrering-frontend-v2:latest
   env:
   - name: APIURL
-    value: https://registrering.felleskomponent.no
+    value: http://fint-kunde-selvregistrering-backend:8080
+  url:
+    hostname: registrering.felleskomponent.no
+    basePath: /
   ingress:
     enabled: true
     middlewares:
